aligning search form order with tab order (bug 572923)

--- a/media/css/reporter.css
+++ b/media/css/reporter.css
@@ -790,6 +790,7 @@ input.placeholder {
 /* {{{ Search Form */
 #search_form {
     line-height: 200%;
+    position: relative;
 }
 #search_form button {
     display: none;
@@ -815,6 +816,7 @@ input.placeholder {
     padding: 0 0 25px;
     position: absolute;
     right: 0;
+    top: 0;
 }
 #search_form #show_search_adv a {
     display: block;
@@ -860,6 +862,9 @@ input.placeholder {
 }
 #search #search_form {
     float: right;
+}
+#search #search_form #show_search_adv {
+    top: 35px;
 }
 #search #search_form .wrap_q {
     margin-bottom: .5em;
